second section added

--- a/index.html
+++ b/index.html
@@ -70,6 +70,28 @@
 </head>
 <body>
 
+    <!--seconf part start--> 
+    <section class="secondpart-container">
+
+      <div class="secondpart">
+          <img  class="s-img" src="D:\WBSCoding\project5\PSD-group3\photoshop\design-assets\png\logo-big.png" alt="pyramid-image">
+      </div>
+      <div class="secondpart">
+          <div>
+          <h2 class="s-h2">OUR STORY</h2>
+  <p class="s-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+      consequuntur eaque! Totam delectus sapiente, officiis dolore eveniet quibusdam quas.
+      dolorum temporibus accusantium. Pariatur.</p>
+      </div>
+  
+      <div>
+         <button class="s-btn">Learn More</button>
+      </div>
+  </div>
+  
+  </section>
+  <!--second part end--> 
+
     <footer class="footer">
         <div class="footer-sec">
             <section>
