modified our story-section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 </head>
 <body>
 
-    <!--seconf part start--> 
+    <!--OUR STORY SECTION START--> 
+    <main>
     <section class="secondpart-container">
 
       <div class="secondpart">
@@ -90,7 +91,10 @@
   </div>
   
   </section>
-  <!--second part end--> 
+</main>
+  <!--OUR STORY-section  end--> 
+
+
 
     <footer class="footer">
         <div class="footer-sec">
