minor improvements to expertise and html file

--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
      <!--Video Section end-->
 
 <section class="expertise-container">
-  <h2 class="expertise-title">Expertise</h2>
-  <p class="expertise-text">Lorem Ipsum dolor proin sit amet gravida nibh vel velit</p>
+  <div class="t">
+    <h2 class="expertise-title">Expertise</h2>
+    <p class="expertise-text">Lorem Ipsum dolor proin sit amet gravida nibh vel velit</p>
+  </div>
   <hr class="expertise-divider">
   <div class="expertise-grid">
-
+    
     <!--Design & Development Section in grid-->
 
     <section class="grid-img grid-heading grid-text"> 
@@ -112,8 +114,6 @@
   <p class="">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
     velit auctor aliquet. Aenean</p>
 </section>
-
-
 
             <!--Search Engine Optimisation Section in grid-->
 <section class="grid-img grid-heading grid-text">
@@ -148,34 +148,7 @@
   </div>
 </section>
 
-
      <!--footer section starts-->
-
-    <!--OUR STORY SECTION START--> 
-    <main>
-    <section class="secondpart-container">
-
-      <div class="secondpart">
-          <img  class="s-img" src="D:\WBSCoding\project5\PSD-group3\photoshop\design-assets\png\logo-big.png" alt="pyramid-image">
-      </div>
-      <div class="secondpart">
-          <div>
-          <h2 class="s-h2">OUR STORY</h2>
-  <p class="s-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
-      consequuntur eaque! Totam delectus sapiente, officiis dolore eveniet quibusdam quas.
-      dolorum temporibus accusantium. Pariatur.</p>
-      </div>
-  
-      <div>
-         <button class="s-btn">Learn More</button>
-      </div>
-  </div>
-  
-  </section>
-</main>
-  <!--OUR STORY-section  end--> 
-
-
     <footer class="footer">
         <div class="footer-sec">
             <section>
