--- a/index.html
+++ b/index.html
@@ -62,12 +62,6 @@
   </body>
 </html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>PSD-Group3</title>
-</head>
 <body>
 
     <!--OUR STORY SECTION START--> 
@@ -91,8 +85,39 @@
   </div>
   
   </section>
+<!--OUR STORY-section  end--> 
+
+<!--Contact-form section  start--> 
+<section id="contact-form-section">
+
+<div class="cf1">
+  <h2 class="cf-h2">GIVE US A GOOD NEWS</h2>
+<form role="contact us" action="#" method="POST">
+  <input type="text" name="name" id="name" placeholder="name"><br>
+  <input type="email" name="email" id="email" placeholder="email"><br>
+  <input type="text" name="subject" id="subject" placeholder="subject"><br>
+  <textarea id="message" name="message" placeholder="your message"></textarea>
+<br><br>
+<button id="cf-btn">Submit</button>
+
+</div>
+
+<div class="cf2 logo-class">
+  <img class="item" src="./photoshop/design-assets/svg/1280px-Gucci_Logo.svg" alt="logo"/>
+  <img class="item" src="./photoshop/design-assets/svg/Zara_Logo.svg" alt="logo"/>
+  <img class="item" src="./photoshop/design-assets/svg/1280px-Barneys_New_York_Logo.svg" alt="logo" />
+  <img class="item" src="./photoshop/design-assets/svg/Calvin_klein_logo.svg" alt="logo"/>
+  <img class="item" src="./photoshop/design-assets/svg/Converse_logo.svg" alt="logo"/>
+  <img class="item" src="./photoshop/design-assets/svg/1280px-Levi's_logo.svg" alt="logo"/>
+  <img class="item" src="./photoshop/design-assets/svg/Billabong.svg" alt="logo"/>
+  <img class="item" src="./photoshop/design-assets/svg/1280px-Logo_NIKE.svg" alt="logo"/>
+  <img class="item" src="./photoshop/design-assets/svg/Puma_Logo.svg" alt="logo"/>
+  <img class="item" src="./photoshop/design-assets/svg/Billabong.svg" alt="logo" />
+</div>
+</section>
+<!--Contact-form section  start--> 
 </main>
-  <!--OUR STORY-section  end--> 
+  
 
 
 
