footer section is completed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -178,28 +177,34 @@
 
     <footer class="footer">
         <div class="footer-sec">
-            <section>
-                <p></p><img src="./photoshop/design-assets/svg/logo.svg" alt="logo">
-                tajam</p><br><br>
+            <section class="footer-sec-1">
+              <div class="foot-sec__logo">
+                <img src="./photoshop/design-assets/svg/logo.svg" alt="logo">
+                <p>tajam</p>
+              </div>
+
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
                      consequuntur eaque! Totam delectus sapiente, officiis dolore eveniet quibusdam quas.
                      dolorum temporibus accusantium. Pariatur.</p>
             </section>
-            <section >
+            <section class="footer-sec-2" >
                 <h3>OUR STUDIO</h3><br><br>
                 <p><img src="./photoshop/design-assets/svg/big104.svg" alt="map">
                 <a href="#" class="foot-addr">Ruko cocruk, Jl. Radio luar dalem jos
-                    NO.12 -13, Kalideres - Jakarta Barat
+                    No.12 -13, Kalideres - Jakarta Barat
                     11480 - Indonesia
                 </a></p>
                 <br>
                 <p><img src="./photoshop/design-assets/svg/phone351.svg" alt="phone logo">
                 <a href="tel:+622122243333" class="foot-addr">(+62)21-2224 3333</a></p>
             </section>
-            <section>
+            <section class="footer-sec-3">
                 <h3>STAY IN TOUCH</h3><br><br>
-                <input type="search" placeholder="Subscribe our newsletter" style="padding: 0.5rem;">
-                <img src="./photoshop/design-assets/svg/paper122.svg" alt=""> <br><br>
+                <section class="subscribe">
+                  <input type="search" placeholder="Subscribe our newsletter" id="subscribe-input">
+                  <button id="subscribe-button"><img src="./photoshop/design-assets/svg/paper122.svg" alt="design paper"></button>
+
+                </section> <br><br>
                 <section class="social-links">
                     <ul class="foot-nav-list">
                         <li><a href="#"><img src="./photoshop/design-assets/svg/facebook.svg" alt="facebook link" title="connect on facebook"></a></li>
@@ -211,14 +216,14 @@
                     </ul>
                 </section>
             </section>
-            <section class="foot-nav">
+            <section class="foot-nav footer-sec-4">
                 <ul class="foot-nav-list">
                     <li><a href="#">HELP</a></li>
                     <li><a href="#">TERM & CONDITION</a></li>
                     <li><a href="#">PRIVACY</a></li>
                 </ul>
             </section>
-            <section class="copyright"><p>
+            <section class="copyright footer-sec-5"><p>
                 Copyright &copy - Tajam Creative
             </p></section>
         </div>
