section team is added

--- a/index.html
+++ b/index.html
@@ -147,8 +147,50 @@
   </div>
 </section>
 
+  <!-- Team Section -->
 
-     <!--footer section starts-->
+  <section class="team-section">
+    <h4 class="capital">Meet our amazing team</h4>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    <section class="team-container">
+      
+        <div class="team-members">
+          <img src="./photoshop/ceo.jpg" alt="image">
+          <div class="team-members-content">
+            <h3>semf ucuk</h3>
+            <p>founder</p>
+          </div>
+        </div>
+  
+      <div class="team-members">
+        <img src="./photoshop/ceo.jpg" alt="image">
+        <div class="team-members-content">
+          <h3>dik adalin</h3>
+          <p>Engineering</p>
+        </div>
+      </div>
+      <div class="team-members">
+        <img src="./photoshop/ceo.jpg" alt="image">
+        <div class="team-members-content">
+          <h3>jeng kol</h3>
+          <p>designer</p>
+        </div>
+      </div>
+
+    <div class="team-members">
+      <img src="./photoshop/ceo.jpg" alt="image">
+      <div class="team-members-content">
+        <h3>pet romak</h3>
+        <p>marketining</p>
+      </div>
+    </div>
+
+    </section>
+    <p>Become part of our dream team, let's join us!</p>
+    <a href="#" class="capital" id="team-button">we are hiring</a>
+
+  </section>
+
 
     <!--OUR STORY SECTION START--> 
     <main>
@@ -175,6 +217,10 @@
   <!--OUR STORY-section  end--> 
 
 
+
+
+
+  <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-sec">
             <section class="footer-sec-1">
