The final version of Footer and Team has been added

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
     <section class="team-container">
       
-        <div class="team-members">
+        <div class="team-members" id="member-1">
           <img src="./photoshop/ceo.jpg" alt="image">
           <div class="team-members-content">
             <h3>semf ucuk</h3>
@@ -162,14 +162,14 @@
           </div>
         </div>
   
-      <div class="team-members">
+      <div class="team-members" id="member-2">
         <img src="./photoshop/ceo.jpg" alt="image">
         <div class="team-members-content">
           <h3>dik adalin</h3>
           <p>Engineering</p>
         </div>
       </div>
-      <div class="team-members">
+      <div class="team-members" id="member-3">
         <img src="./photoshop/ceo.jpg" alt="image">
         <div class="team-members-content">
           <h3>jeng kol</h3>
@@ -177,7 +177,7 @@
         </div>
       </div>
 
-    <div class="team-members">
+    <div class="team-members" id="member-1">
       <img src="./photoshop/ceo.jpg" alt="image">
       <div class="team-members-content">
         <h3>pet romak</h3>
@@ -221,8 +221,7 @@
 
 
   <!-- Footer Section -->
-    <footer class="footer">
-        <div class="footer-sec">
+    <footer class="footer footer-sec">
             <section class="footer-sec-1">
               <div class="foot-sec__logo">
                 <img src="./photoshop/design-assets/svg/logo.svg" alt="logo">
@@ -234,7 +233,7 @@
                      dolorum temporibus accusantium. Pariatur.</p>
             </section>
             <section class="footer-sec-2" >
-                <h3>OUR STUDIO</h3><br><br>
+                <h3>OUR STUDIO</h3><br>
                 <p><img src="./photoshop/design-assets/svg/big104.svg" alt="map">
                 <a href="#" class="foot-addr">Ruko cocruk, Jl. Radio luar dalem jos
                     No.12 -13, Kalideres - Jakarta Barat
@@ -245,12 +244,12 @@
                 <a href="tel:+622122243333" class="foot-addr">(+62)21-2224 3333</a></p>
             </section>
             <section class="footer-sec-3">
-                <h3>STAY IN TOUCH</h3><br><br>
+                <h3>STAY IN TOUCH</h3><br>
                 <section class="subscribe">
-                  <input type="search" placeholder="Subscribe our newsletter" id="subscribe-input">
+                  <input type="email" placeholder="Subscribe our newsletter" id="subscribe-input">
                   <button id="subscribe-button"><img src="./photoshop/design-assets/svg/paper122.svg" alt="design paper"></button>
 
-                </section> <br><br>
+                </section> <br>
                 <section class="social-links">
                     <ul class="foot-nav-list">
                         <li><a href="#"><img src="./photoshop/design-assets/svg/facebook.svg" alt="facebook link" title="connect on facebook"></a></li>
@@ -272,7 +271,6 @@
             <section class="copyright footer-sec-5"><p>
                 Copyright &copy - Tajam Creative
             </p></section>
-        </div>
 
     </footer>
     <!--footer section ends-->
