contact form modified

--- a/index.html
+++ b/index.html
@@ -90,32 +90,40 @@
 <!--Contact-form section  start--> 
 <section id="contact-form-section">
 
-<div class="cf1">
-  <h2 class="cf-h2">GIVE US A GOOD NEWS</h2>
-<form role="contact us" action="#" method="POST">
-  <input type="text" name="name" id="name" placeholder="name"><br>
-  <input type="email" name="email" id="email" placeholder="email"><br>
-  <input type="text" name="subject" id="subject" placeholder="subject"><br>
-  <textarea id="message" name="message" placeholder="your message"></textarea>
-<br><br>
-<button id="cf-btn">Submit</button>
+  <div class="cf1">
 
-</div>
+   <h2 class="headings">GIVE US A GOOD NEWS</h2>
 
-<div class="cf2 logo-class">
-  <img class="item" src="./photoshop/design-assets/svg/1280px-Gucci_Logo.svg" alt="logo"/>
-  <img class="item" src="./photoshop/design-assets/svg/Zara_Logo.svg" alt="logo"/>
-  <img class="item" src="./photoshop/design-assets/svg/1280px-Barneys_New_York_Logo.svg" alt="logo" />
-  <img class="item" src="./photoshop/design-assets/svg/Calvin_klein_logo.svg" alt="logo"/>
-  <img class="item" src="./photoshop/design-assets/svg/Converse_logo.svg" alt="logo"/>
-  <img class="item" src="./photoshop/design-assets/svg/1280px-Levi's_logo.svg" alt="logo"/>
-  <img class="item" src="./photoshop/design-assets/svg/Billabong.svg" alt="logo"/>
-  <img class="item" src="./photoshop/design-assets/svg/1280px-Logo_NIKE.svg" alt="logo"/>
-  <img class="item" src="./photoshop/design-assets/svg/Puma_Logo.svg" alt="logo"/>
-  <img class="item" src="./photoshop/design-assets/svg/Billabong.svg" alt="logo" />
+    <div class="contact-form">
+  <form role="contact us" action="#" method="POST">
+    <input type="text" name="name" class="f-item" placeholder="name"><br>
+    <input type="email" name="email" class="f-item" placeholder="email"><br>
+    <input type="text" name="subject" class="f-item" placeholder="subject"><br>
+    <textarea cols="20" rows="8" class="f-item" placeholder="your message"></textarea>
+  <br>
+  <button id="cf-btn">Submit</button>
 </div>
-</section>
-<!--Contact-form section  start--> 
+</div>
+  
+  <div class="cf2">
+     <h2 class="headings">OUR HAPPY CLIENT</h2>
+
+     <div class=logos>
+    <img class="item" src="./photoshop/design-assets/svg/1280px-Gucci_Logo.svg" alt="logo"/>
+    <img class="item" src="./photoshop/design-assets/svg/Zara_Logo.svg" alt="logo"/>
+    <img class="item" src="./photoshop/design-assets/svg/1280px-Barneys_New_York_Logo.svg" alt="logo" />
+    <img class="item" src="./photoshop/design-assets/svg/Calvin_klein_logo.svg" alt="logo"/>
+    <img class="item" src="./photoshop/design-assets/svg/Converse_logo.svg" alt="logo"/>
+    <img class="item" src="./photoshop/design-assets/svg/1280px-Levi's_logo.svg" alt="logo"/>
+    <img class="item" src="./photoshop/design-assets/svg/Billabong.svg" alt="logo"/>
+    <img class="item" src="./photoshop/design-assets/svg/1280px-Logo_NIKE.svg" alt="logo"/>
+    <img class="item" src="./photoshop/design-assets/svg/Puma_Logo.svg" alt="logo"/>
+    <img class="item" src="./photoshop/design-assets/svg/Billabong.svg" alt="logo" />
+  </div>
+  </div>
+
+  </section>
+<!--Contact-form section  end--> 
 </main>
   
 
