picture in our story section added

--- a/index.html
+++ b/index.html
@@ -70,6 +70,29 @@
         <button class="hero-btn">LEARN MORE</button>
       </div>
     </div>
+     <!--OUR STORY SECTION START--> 
+     
+      <section class="secondpart-container">
+  
+        <div class="secondpart">
+            <img  class="s-img" src=".\photoshop\design-assets\png\logo-big.png" alt="pyramid-image">
+        </div>
+        <div class="secondpart">
+            <div>
+            <h2 class="s-h2">OUR STORY</h2>
+    <p class="s-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+        consequuntur eaque! Totam delectus sapiente, officiis dolore eveniet quibusdam quas.
+        dolorum temporibus accusantium. Pariatur.</p>
+        </div>
+  
+        <div>
+           <button class="s-btn">Learn More</button>
+        </div>
+    </div>
+  
+    </section>
+  
+    <!--OUR STORY-section  end--> 
     <!--Video Section start-->
     <section class="video">
       <div class="play-btn-container">
